# MCPToolRec

./: .gitattributes  .gitignore  README.md  benchmark_tasks_single_20251015test.json  benchmark_tasks_single_20251015test_runner_format.json  mcp_servers_info.json  mcp_servers_info.md
cache/: tool_cache.db
llm/: local_adapter.py
mcp_servers/: commands.json  install.sh
mcp_servers/huggingface-mcp-server/src/huggingface/: server.py
mcp_servers/retrieval-mcp-server/: ENHANCED.md  ENHANCED_README.md  MODEL_PATH_GUIDE.md  __init__.py  core_server.py  enhanced_requirements.txt  enhanced_server.py  example_model_path.py  pyproject.toml  requirements.txt  server.py  test_simple.py
preprocess_scripts/: Readme.md  amazon_electronics_preprocess.py
synthesis/: README.md  llm_config.py  llm_retrieval_synthesizer.py  retrieval_task_synthesizer.py  run_llm_retrieval_synthesis.py  single_tool_task_key.json  single_tool_task_semantic.json  single_tool_task_sql.json  single_tool_task_websearch.json  single_tool_tasks.json
utils/: collect_mcp_info.py
